# mcp-project

./: .gitignore  .gitmodules  ARCHITECTURE.md  CHANGES_SUMMARY.md  CODE_NATIVE_APPROACH.md  Dockerfile  GETTING_STARTED.md  PRISMATIC_BUILD_GUIDE.md  PRISMATIC_DEPLOYMENT.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  STEP_BY_STEP_BUILD.md  Salesforce_Opportunity_x_Luminance_Use_Cases.md  create-properties.js  env.example  pyproject.toml  requirements.txt  setup.py  test-install.sh
.obsidian/: workspace.json
Panorays/: NO_PRISMATIC_CHANGES_SOLUTION.md  PRISMATIC_RESPONSE_GUIDE.md  QUICK_START.md  README.md  README_FIRST 1.txt
PowerApps/: COPY_PASTE_SNIPPETS.md  DRAFT_SAVE_IMPLEMENTATION.md  README.md
SSO and Doc/: AUTHENTICATION_OPTIONS.md  ENV_ID_GUIDE.md  FIND_ACCOUNT_ID.md  QUICK_START_EXTERNAL_PROVIDERS.md  SETUP_ENV.md  SETUP_EXTERNAL_PROVIDERS_README.md  check_env.py  env.template  oauth_session.py  session_auth_helper.py  setup_external_providers.py  test_docusign_setup.py  test_oauth_credentials.py
USSA/: PANORAYS_INTEGRATION_PLAN.md
components/: README.md
credentials/: luminance-oauth.json  salesforce.pk8
docs/: README.md  TECHNICAL_DEEP_DIVE.md
integration-mcp/: ARCHITECTURE.md  env.example  pyproject.toml  requirements.txt
integration_mcp/: __init__.py  server.py
integration_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
luminance-card-static/: DEPLOYMENT_GUIDE.md  REFACTOR_INFO.md  hsproject.json
luminance-hubspot-middleware/: .env.vercel  README.md  package-lock.json  package.json
luminance-mcp-tools/: README.md  (+7 more)
(+261 files in other folders)
